update activation email text

--- a/internal/mailer/templates/activate_user.tmpl
+++ b/internal/mailer/templates/activate_user.tmpl
@@ -8,4 +8,7 @@ via a frontend or the `PUT /v1/users/activated` API endpoint:
 
 {{.Token}}
 
+This token will expire in one day. After this period, it 
+will be considered invalid.
+
 {{ end }}
